# vrenetic-ai-cli

./: .coveragerc  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  Jenkinsfile  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py
data/: db.json  index.json
data/assets/0021f99999a6a400013c0000/python/: expression.py
data/assets/06c180564e5934837c7c137d130fdf6d/python/: mapping.py  vresh-feed-relevance-v1.py
data/assets/5b21f94435a6a400013c6eca/python/: expression.py  mapper.py
data/assets/5b9fa90171d4f00001bc863e/python/: expression.py  mapper.py
data/assets/5cfe0db269e0ba0001bfb7df/python/: expression.py  mapper.py  trainner.py
data/assets/9c21f99999a6a400013c6321/python/: expression.py  mapper.py
data/assets/acacf99999a6a400013c4321/python/: expression.py
data/assets/bc21f99999a6a400013c6666/python/: expression.py  mapper.py
data/contracts/: v1.0.0.json
data/dtos/: v1.0.0.json
data/manifests/ann/: v1.0.0.json
data/manifests/workflow/: v1.0.0.json
data/vresh/: index.json
data/vresh/nn-model-library/nn-vresh-population-usa-feed/: model_optimisation_1.py  (+1 more)
docs/: AI-PACKAGE-V1.md  CONTRACT-V1.md  DTO-V1.md  MANIFEST-V1.md  Makefile  WORKFLOW-V1.md  conf.py  index.rst
src/vrenetic/: ai.py
src/vrenetic/backends/: opencl.py  opencv.py  pytorch.py  tensorflow.py
src/vrenetic/data/: db.json
src/vrenetic/providers/: ___init__.py  application.py  cli.py  nn.py  workflow.py
src/vrenetic_ai/: __init__.py  skeleton.py  vrenetic-ai.py
tests/: conftest.py  test_cli.py  test_skeleton.py
(+20 files in other folders)
