[metadata]
name = vrenetic-ai
description = VRenetic AI Cli Tools
author = kris-lab
author-email = krzysztof.piotr.stasiak@gmail.com
license = MIT
url = https://github.com/vrenetic-inc/vrenetic-ai-cli
long-description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.1a0,<3.2a0
install_requires =
    tinydb>=3.13.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    vrenetic-ai = vrenetic.ai:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov vrenetic --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 3.1
package = vrenetic
